# xrs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  ROADMAP.md
crates/xrs-bin/: Cargo.toml
crates/xrs-bin/src/: main.rs
crates/xrs-common/: Cargo.toml
crates/xrs-common/src/: lib.rs
crates/xrs-config/: Cargo.toml
crates/xrs-config/src/: lib.rs
crates/xrs-core/: Cargo.toml
crates/xrs-core/src/: lib.rs
crates/xrs-observability/: Cargo.toml
crates/xrs-observability/src/: lib.rs
crates/xrs-router/: Cargo.toml
crates/xrs-router/src/: lib.rs
docs/superpowers/plans/: 2026-05-14-xrs-foundation.md
tests/fixtures/: base-inbounds.json  local-socks.json
tests/fixtures/confdir/: 02-routing.json
