[workspace]
members = [
    "crates/xrs-bin",
    "crates/xrs-common",
    "crates/xrs-config",
    "crates/xrs-core",
    "crates/xrs-observability",
    "crates/xrs-router",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/yiwei/xrs"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
chacha20poly1305 = "0.10.1"
crc32fast = "1.5.0"
hkdf = "0.12.4"
hmac = "0.12.1"
md-5 = "0.10.6"
native-tls = { version = "0.2.14", features = ["alpn", "alpn-accept"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
futures = "0.3.31"
http = "1.4.0"
ipnet = "2.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

xrs-common = { path = "crates/xrs-common" }
xrs-config = { path = "crates/xrs-config" }
xrs-core = { path = "crates/xrs-core" }
xrs-observability = { path = "crates/xrs-observability" }
xrs-router = { path = "crates/xrs-router" }
