[package]
name = "xrs-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "xrs"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
xrs-config.workspace = true
xrs-core.workspace = true
