[package]
name = "xrs-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fastrand.workspace = true
ipnet.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
xrs-common.workspace = true
xrs-config.workspace = true
